Convert to Mojmap.