@@ -8,24 +8,23 @@ import net.fabricmc.fabric.api.transfer.v1.storage.StorageUtil;
 import net.gnomecraft.cooldowncoordinator.CooldownCoordinator;
 import net.gnomecraft.ductwork.Ductwork;
 import net.gnomecraft.ductwork.base.DuctworkBlockEntity;
-import net.minecraft.block.Block;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.entity.BlockEntity;
-import net.minecraft.block.entity.Hopper;
-import net.minecraft.block.entity.HopperBlockEntity;
-import net.minecraft.entity.ItemEntity;
-import net.minecraft.entity.player.PlayerInventory;
-import net.minecraft.inventory.Inventory;
-import net.minecraft.item.ItemStack;
-import net.minecraft.registry.tag.BlockTags;
-import net.minecraft.screen.ScreenHandler;
-import net.minecraft.storage.ReadView;
-import net.minecraft.storage.WriteView;
-import net.minecraft.util.collection.DefaultedList;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.Box;
-import net.minecraft.util.math.Direction;
-import net.minecraft.world.World;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.entity.BlockEntity;
+import net.minecraft.world.level.block.entity.Hopper;
+import net.minecraft.world.level.block.entity.HopperBlockEntity;
+import net.minecraft.world.entity.item.ItemEntity;
+import net.minecraft.world.entity.player.Inventory;
+import net.minecraft.world.Container;
+import net.minecraft.tags.BlockTags;
+import net.minecraft.world.inventory.AbstractContainerMenu;
+import net.minecraft.world.level.storage.ValueInput;
+import net.minecraft.world.level.storage.ValueOutput;
+import net.minecraft.core.BlockPos;
+import net.minecraft.world.phys.AABB;
+import net.minecraft.core.Direction;
+import net.minecraft.world.level.Level;
+import org.jspecify.annotations.NullMarked;
 
 /*
  * NOTE:
@@ -33,53 +32,53 @@ import net.minecraft.world.World;
  * NOTE: Collecting (extracting) is CollectorBlock.INTAKE which defaults to FACING.getOpposite()...
  * NOTE:
  */
+@NullMarked
 public class CollectorEntity extends DuctworkBlockEntity implements Hopper {
     public final static int currentBlockRev = 2;  // hack around Fabric's missing DFU API
     private int blockRev;
 
     // Collector area definitions for Hopper.getInputAreaShape()
-    private final static Box INPUT_AREA_SHAPE_NORTH = Block.createCuboidShape(  0.0D,   0.0D, -16.0D, 16.0D, 16.0D,  0.0D).getBoundingBoxes().get(0);
-    private final static Box INPUT_AREA_SHAPE_EAST  = Block.createCuboidShape( 16.0D,   0.0D,   0.0D, 32.0D, 16.0D, 16.0D).getBoundingBoxes().get(0);
-    private final static Box INPUT_AREA_SHAPE_SOUTH = Block.createCuboidShape(  0.0D,   0.0D,  16.0D, 16.0D, 16.0D, 32.0D).getBoundingBoxes().get(0);
-    private final static Box INPUT_AREA_SHAPE_WEST  = Block.createCuboidShape(-16.0D,   0.0D,   0.0D,  0.0D, 16.0D, 16.0D).getBoundingBoxes().get(0);
-    private final static Box INPUT_AREA_SHAPE_DOWN  = Block.createCuboidShape(  0.0D, -16.0D,   0.0D, 16.0D,  0.0D, 16.0D).getBoundingBoxes().get(0);
-    private final static Box INPUT_AREA_SHAPE_UP    = Block.createCuboidShape(  0.0D,  16.0D,   0.0D, 16.0D, 32.0D, 16.0D).getBoundingBoxes().get(0);
+    private final static AABB INPUT_AREA_SHAPE_NORTH = Block.box(  0.0D,   0.0D, -16.0D, 16.0D, 16.0D,  0.0D).toAabbs().getFirst();
+    private final static AABB INPUT_AREA_SHAPE_EAST  = Block.box( 16.0D,   0.0D,   0.0D, 32.0D, 16.0D, 16.0D).toAabbs().getFirst();
+    private final static AABB INPUT_AREA_SHAPE_SOUTH = Block.box(  0.0D,   0.0D,  16.0D, 16.0D, 16.0D, 32.0D).toAabbs().getFirst();
+    private final static AABB INPUT_AREA_SHAPE_WEST  = Block.box(-16.0D,   0.0D,   0.0D,  0.0D, 16.0D, 16.0D).toAabbs().getFirst();
+    private final static AABB INPUT_AREA_SHAPE_DOWN  = Block.box(  0.0D, -16.0D,   0.0D, 16.0D,  0.0D, 16.0D).toAabbs().getFirst();
+    private final static AABB INPUT_AREA_SHAPE_UP    = Block.box(  0.0D,  16.0D,   0.0D, 16.0D, 32.0D, 16.0D).toAabbs().getFirst();
 
     public CollectorEntity(BlockPos pos, BlockState state) {
-        super(Ductwork.COLLECTOR_ENTITY, pos, state);
+        super(Ductwork.COLLECTOR_ENTITY, pos, state, 5);
 
-        this.inventory = DefaultedList.ofSize(5, ItemStack.EMPTY);
         this.transferCooldown = 0;
         this.blockRev = -1;
     }
 
     @Override
-    public ScreenHandler createScreenHandler(int syncId, PlayerInventory playerInventory) {
+    public AbstractContainerMenu createMenu(int syncId, Inventory playerInventory) {
         return new CollectorScreenHandler(syncId, playerInventory, this);
     }
 
     @Override
-    protected void writeData(WriteView view) {
+    protected void saveAdditional(ValueOutput view) {
         // Implement hack around Fabric's missing DFU API.
         if (this.blockRev >= 0) {
             view.putInt("BlockRev", this.blockRev);
         }
 
-        super.writeData(view);
+        super.saveAdditional(view);
     }
 
     @Override
-    protected void readData(ReadView view) {
-        super.readData(view);
+    protected void loadAdditional(ValueInput view) {
+        super.loadAdditional(view);
 
         // Implement hack around Fabric's missing DFU API.
-        this.blockRev = view.getInt("BlockRev", 0);
+        this.blockRev = view.getIntOr("BlockRev", 0);
     }
 
-    public static void tick(World world, BlockPos pos, BlockState state, CollectorEntity entity) {
+    public static void tick(Level world, BlockPos pos, BlockState state, CollectorEntity entity) {
         boolean dirty = false;
 
-        if (world == null || world.isClient()) {
+        if (world.isClientSide()) {
             return;
         }
 
@@ -92,25 +91,23 @@ public class CollectorEntity extends DuctworkBlockEntity implements Hopper {
                     break;
                 case 0:
                     // BlockRev 0 INTAKE was hard-coded to opposite of facing; reinitialize it.
-                    Direction intake = state.get(CollectorBlock.FACING).getOpposite();
-                    Ductwork.LOGGER.info("Collector at (" + pos.toShortString() + ") has BlockRev " + entity.blockRev + "; setting INTAKE to " + intake);
-                    world.setBlockState(pos, state.with(CollectorBlock.INTAKE, intake));
+                    Direction intake = state.getValue(CollectorBlock.FACING).getOpposite();
+                    Ductwork.LOGGER.info("Collector at ({}) has BlockRev {}; setting INTAKE to {}", pos.toShortString(), entity.blockRev, intake);
+                    world.setBlockAndUpdate(pos, state.setValue(CollectorBlock.INTAKE, intake));
                     entity.blockRev = 1;
                 case 1:
                     // BlockRev 1 did not connect to inputs, so re-check connections.
-                    world.setBlockState(pos, ((CollectorBlock) state.getBlock()).resetInputConnections(state, world, pos));
+                    world.setBlockAndUpdate(pos, ((CollectorBlock) state.getBlock()).resetInputConnections(state, world, pos));
                     entity.blockRev = 2;
                 default:
                     if (entity.blockRev != CollectorEntity.currentBlockRev) {
-                        Ductwork.LOGGER.warn("Collector at " + pos + " has rev " + entity.blockRev
-                                + " but our latest known rev is " + CollectorEntity.currentBlockRev
-                                + " ... expect trouble!");
+                        Ductwork.LOGGER.warn("Collector at {} has rev {} but our latest known rev is {} ... expect trouble!", pos, entity.blockRev, CollectorEntity.currentBlockRev);
                     }
             }
             dirty = true;
         }
 
-        entity.lastTickTime = world.getTime();
+        entity.lastTickTime = world.getGameTime();
 
         // If we are in cooldown, decrement.
         if (entity.transferCooldown > 0) {
@@ -119,7 +116,7 @@ public class CollectorEntity extends DuctworkBlockEntity implements Hopper {
         }
 
         // If we are enabled and out of cooldown,
-        if (state.get(CollectorBlock.ENABLED) && entity.transferCooldown <= 0) {
+        if (state.getValue(CollectorBlock.ENABLED) && entity.transferCooldown <= 0) {
             // If we have inventory, try to push it.
             if (!entity.isEmpty() && entity.push(world, pos, state, entity)) {
                 entity.transferCooldown = CollectorEntity.defaultCooldown;
@@ -134,16 +131,16 @@ public class CollectorEntity extends DuctworkBlockEntity implements Hopper {
         }
 
         if (dirty) {
-            entity.markDirty();
+            entity.setChanged();
         }
     }
 
     // Fabric transfer API implementation; uses coordinated cooldown notification.
-    private boolean push(World world, BlockPos pos, BlockState state, CollectorEntity entity) {
-        Direction facing = state.get(CollectorBlock.FACING);
-        BlockEntity targetEntity = world.getBlockEntity(pos.offset(facing));
+    private boolean push(Level world, BlockPos pos, BlockState state, CollectorEntity entity) {
+        Direction facing = state.getValue(CollectorBlock.FACING);
+        BlockEntity targetEntity = world.getBlockEntity(pos.relative(facing));
         Storage<ItemVariant> sourceStorage = ItemStorage.SIDED.find(world, pos, state, entity, facing);
-        Storage<ItemVariant> targetStorage = ItemStorage.SIDED.find(world, pos.offset(facing), facing.getOpposite());
+        Storage<ItemVariant> targetStorage = ItemStorage.SIDED.find(world, pos.relative(facing), facing.getOpposite());
 
         if (sourceStorage != null && targetStorage != null) {
             boolean targetEmpty = CooldownCoordinator.isStorageEmpty(targetStorage);
@@ -153,7 +150,7 @@ public class CollectorEntity extends DuctworkBlockEntity implements Hopper {
                     CooldownCoordinator.notify(targetEntity);
                 }
                 if (targetEntity != null) {
-                    targetEntity.markDirty();
+                    targetEntity.setChanged();
                 }
 
                 return true;
@@ -165,10 +162,10 @@ public class CollectorEntity extends DuctworkBlockEntity implements Hopper {
 
     // Fabric transfer API implementation required here too because hopper extract only looks up...
     // No cooldown coordination is required when extracting; only the local (target) cooldown needs to be updated.
-    private boolean pull(World world, BlockPos pos, BlockState state, CollectorEntity entity) {
+    private boolean pull(Level world, BlockPos pos, BlockState state, CollectorEntity entity) {
         // Extraction (intake) on the opposite side, in the opposite direction...
-        Direction intake = state.get(CollectorBlock.INTAKE);
-        BlockPos sourcePos = pos.offset(intake);
+        Direction intake = state.getValue(CollectorBlock.INTAKE);
+        BlockPos sourcePos = pos.relative(intake);
         Storage<ItemVariant> targetStorage = ItemStorage.SIDED.find(world, pos, state, entity, intake);
 
         // Try to find storage first.  This will also find stationary inventories.
@@ -178,7 +175,7 @@ public class CollectorEntity extends DuctworkBlockEntity implements Hopper {
         // This will find mobile inventories (hopper or chest minecart, chest boat?, etc.).
         // HopperBlockEntity.getInventoryAt() will pick one of the available mobile inventories at random.
         if (sourceStorage == null) {
-            Inventory sourceInventory =  HopperBlockEntity.getInventoryAt(world, sourcePos);
+            Container sourceInventory =  HopperBlockEntity.getContainerAt(world, sourcePos);
             if (sourceInventory != null) {
                 sourceStorage = InventoryStorage.of(sourceInventory, intake.getOpposite());
             }
@@ -189,7 +186,7 @@ public class CollectorEntity extends DuctworkBlockEntity implements Hopper {
             boolean result =  (StorageUtil.move(sourceStorage, targetStorage, variant -> true, 1, null) > 0);
             BlockEntity sourceEntity = world.getBlockEntity(sourcePos);
             if (sourceEntity != null) {
-                sourceEntity.markDirty();
+                sourceEntity.setChanged();
             }
             return result;
         }
@@ -197,9 +194,9 @@ public class CollectorEntity extends DuctworkBlockEntity implements Hopper {
         // Then if no inventory was found, try to pull entities through the intake of the collector.
         // We implement the Hopper interface so we can do this small bit of code reuse.
         BlockState sourceState = world.getBlockState(sourcePos);
-        if (!sourceState.isFullCube(world, sourcePos) || sourceState.isIn(BlockTags.DOES_NOT_BLOCK_HOPPERS)) {
-            for (ItemEntity itemEntity : HopperBlockEntity.getInputItemEntities(world, entity)) {
-                if (HopperBlockEntity.extract(entity, itemEntity)) {
+        if (!sourceState.isCollisionShapeFullBlock(world, sourcePos) || sourceState.is(BlockTags.DOES_NOT_BLOCK_HOPPERS)) {
+            for (ItemEntity itemEntity : HopperBlockEntity.getItemsAtAndAbove(world, entity)) {
+                if (HopperBlockEntity.addItem(entity, itemEntity)) {
                     return true;
                 }
             }
@@ -210,8 +207,8 @@ public class CollectorEntity extends DuctworkBlockEntity implements Hopper {
     }
 
     @Override
-    public Box getInputAreaShape() {
-        return switch (this.getCachedState().get(CollectorBlock.INTAKE)) {
+    public AABB getSuckAabb() {
+        return switch (this.getBlockState().getValue(CollectorBlock.INTAKE)) {
             case NORTH -> INPUT_AREA_SHAPE_NORTH;
             case EAST  -> INPUT_AREA_SHAPE_EAST;
             case SOUTH -> INPUT_AREA_SHAPE_SOUTH;
@@ -222,22 +219,22 @@ public class CollectorEntity extends DuctworkBlockEntity implements Hopper {
     }
 
     @Override
-    public double getHopperX() {
-        return (double)this.pos.getX() + 0.5;
+    public double getLevelX() {
+        return (double)this.worldPosition.getX() + 0.5;
     }
 
     @Override
-    public double getHopperY() {
-        return (double)this.pos.getY() + 0.5;
+    public double getLevelY() {
+        return (double)this.worldPosition.getY() + 0.5;
     }
 
     @Override
-    public double getHopperZ() {
-        return (double)this.pos.getZ() + 0.5;
+    public double getLevelZ() {
+        return (double)this.worldPosition.getZ() + 0.5;
     }
 
     @Override
-    public boolean canBlockFromAbove() {
+    public boolean isGridAligned() {
         // We implement our own sided version of the associated logic in the `pull` method.
         return false;
     }
